--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,66 +1,124 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.dev-nav{
-    li{
-        display: inline-block;
-    }
-}
-.singup{
-    position: fixed;
-    justify-items: center;
-    left:50%;
-    top:50%;
-    margin-left:-240px;
-    margin-top:-340px;
-     .box-card {
-       width: 480px;
-     }
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.login{
-    
-    position: fixed;
-    justify-items: center;
-    left:50%;
-    top:50%;
-    margin-left:-240px;
-    margin-top:-340px;
-    
-    @at-root.login-background{
-        height: 100%;
-        width:100%;
-        position:fixed;
-        text-align: center;
-        background-image: url("http://5b0988e595225.cdn.sohucs.com/images/20180408/e417387a12f548aa84127502af6a1a28.jpeg");
-    }
-    .box-card{
-        width: 480px;
-        
-        
-    }
-    .logo
+
+
+.dev-nav {
+  li {
+    display: inline-block;
+  }
+}
+.login-form{
+    width:460px;
+    .el-icon-success
     {
-        width: 90px;
-        height: 90px;
-        background-color: gray;
-        
+       font-size: 50px;
+        color: green;
+        text-align: center;
+    }
+    span{
+        font-size: 12px;
+        color: darkgray;
     }
     input{
+        height: 40px;
+        width: 358px;
+    }
+      .avatar-uploader .el-upload {
+        border: 1px dashed #d9d9d9;
+        border-radius: 6px;
+        cursor: pointer;
+        position: relative;
+        overflow: hidden;
+      }
 
-        height: 40px;
-        width:360px;
-        
-    }
-    @at-root.login-copyright{
-        position: fixed;
-        bottom: 10%;
+      .avatar-uploader .el-upload:hover {
+        border-color: #409EFF;
+      }
+
+      .avatar-uploader-icon {
+        font-size: 28px;
+        color: #8c939d;
+        width: 100px;
+        height: 100px;
+        line-height: 100px;
         text-align: center;
+      }
+
+      .avatar {
+        width: 178px;
+        height: 178px;
+        display: block;
+      }
+}
+.singup {
+  position: fixed;
+  justify-items: center;
+  left: 50%;
+  top: 50%;
+  margin-left: -240px;
+  margin-top: -340px;
+
+  .box-card {
+    width: 640px;
+    padding: 20px;
+
+    .login-input {
+      input {
         height: 40px;
-        font-size: 14px;
-        color: gray;
-        width: 100%;
+        width: 358px;
+      }
     }
+  }
+}
+
+.login {
+
+  position: fixed;
+  justify-items: center;
+  left: 50%;
+  top: 50%;
+  margin-left: -240px;
+  margin-top: -340px;
+
+  @at-root.login-background {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    text-align: center;
+    background-image: url("http://5b0988e595225.cdn.sohucs.com/images/20180408/e417387a12f548aa84127502af6a1a28.jpeg");
+  }
+
+  .box-card {
+    width: 480px;
+
+
+  }
+
+  .logo {
+    width: 90px;
+    height: 90px;
+    background-color: gray;
+
+  }
+
+  input {
+
+    height: 40px;
+    width: 360px;
+
+  }
+
+  @at-root.login-copyright {
+    position: fixed;
+    bottom: 10%;
+    text-align: center;
+    height: 40px;
+    font-size: 14px;
+    color: whitesmoke;
+    width: 100%;
+  }
 
 }
