--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,10 +7,31 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  background-color: #f0f2f5
+}
+
+.main_header {
+  height: 50px !important;
+  background-color: white;
+  line-height: 50px;
+  .font_family{
+      font-size: 30px;
+      
+  }
+  .cor{
+      background-color: red;
+
+  }
+
+}
+
+.main_main {
+  height: 100%;
+  
 }
 
 .side {
-  width: 200px;
+  width: 100%;
   background-color: #1d2437;
   height: 100%;
   float: left;
@@ -23,6 +44,9 @@
   }
 
   .main_menu {
+    .el-menu {
+      border: none;
+    }
 
     .el-submenu__title:hover {
       background-color: #101728 !important;
